--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "whatsapp-web-clone",
+  "name": "resolver",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,9 +14,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^5.3.0",
     "firebase": "^7.24.0",
     "firestore": "^1.1.6",
     "react": "^16.13.1",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^16.13.1",
     "react-firebase-hooks": "^5.1.1",
     "react-loader-spinner": "^3.1.14",
